refactor: change email field in UserVO to non-nullable and add albumCount to UserPageVO
